Reorganize into simple-sr

--- a/audio/simple-sr/conv2d.ipynb
+++ b/audio/simple-sr/conv2d.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 1,
    "id": "4c090374-88e6-49e8-b0f2-0d04b6de057e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-28 10:49:04.946593: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import pathlib\n",
     "import numpy as np\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 2,
    "id": "6b132515-7d8e-4497-9e42-f4af0b080fa0",
    "metadata": {},
    "outputs": [],
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 3,
    "id": "b955358b-9b63-403e-a343-eb970df08e28",
    "metadata": {},
    "outputs": [],
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 4,
    "id": "343c7e70-f0fa-43b1-adac-8d3671246e06",
    "metadata": {},
    "outputs": [
@@ -84,25 +93,25 @@
       "text/plain": [
        "(TensorShape([1, 124, 129, 1]),\n",
        " <tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
-       " array([[0.00021577],\n",
-       "        [0.00242205],\n",
-       "        [0.00827248],\n",
-       "        [0.01238501],\n",
-       "        [0.01051275],\n",
-       "        [0.01144113],\n",
-       "        [0.01872324],\n",
-       "        [0.02427843],\n",
-       "        [0.04116756],\n",
-       "        [0.09470174]], dtype=float32)>)"
+       " array([[0.00087561],\n",
+       "        [0.00134371],\n",
+       "        [0.00557508],\n",
+       "        [0.01203688],\n",
+       "        [0.01582851],\n",
+       "        [0.01979508],\n",
+       "        [0.03313684],\n",
+       "        [0.05369601],\n",
+       "        [0.05009932],\n",
+       "        [0.03737277]], dtype=float32)>)"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "waveform = get_waveform(data_dir/'test/h_yes.wav')\n",
+    "waveform = get_waveform(data_dir/'yes.wav')\n",
     "spec = get_spectrogram(waveform)\n",
     "input_data = spec[tf.newaxis,...]\n",
     "input_data.shape, input_data[0,0,:10,:]"
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "id": "9fecf877-9c53-46aa-9488-6ae720bcf962",
    "metadata": {},
    "outputs": [
@@ -161,7 +170,7 @@
     }
    ],
    "source": [
-    "h5_model = tf.keras.models.load_model('simple_audio.h5')\n",
+    "h5_model = tf.keras.models.load_model('simple-sr.h5')\n",
     "h5_model.summary()"
    ]
   },
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "id": "007ee942-f808-4efa-b574-6a44d9e2b43c",
    "metadata": {},
    "outputs": [
@@ -183,20 +192,20 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(3, 3, 1), dtype=float32, numpy=\n",
-       "array([[[0.00331012],\n",
-       "        [0.0239757 ],\n",
-       "        [0.09051986]],\n",
+       "array([[[0.00606233],\n",
+       "        [0.02537882],\n",
+       "        [0.09502278]],\n",
        "\n",
-       "       [[0.0023394 ],\n",
-       "        [0.01505184],\n",
-       "        [0.04525724]],\n",
+       "       [[0.00929757],\n",
+       "        [0.02589507],\n",
+       "        [0.49793145]],\n",
        "\n",
-       "       [[0.00353799],\n",
-       "        [0.04326304],\n",
-       "        [0.53528124]]], dtype=float32)>"
+       "       [[0.00940787],\n",
+       "        [0.02270582],\n",
+       "        [0.08615017]]], dtype=float32)>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 34,
    "id": "187b5ee3-21e4-4e3f-b46a-8461a65344b4",
    "metadata": {},
    "outputs": [
@@ -218,20 +227,20 @@
      "data": {
       "text/plain": [
        "(TensorShape([1, 32, 32, 1]),\n",
-       " array([[[-0.15976997],\n",
-       "         [-0.13272853],\n",
-       "         [-0.04565387]],\n",
+       " array([[[-0.15616861],\n",
+       "         [-0.13089252],\n",
+       "         [-0.0397617 ]],\n",
        " \n",
-       "        [[-0.16104017],\n",
-       "         [-0.14440563],\n",
-       "         [-0.10488112]],\n",
+       "        [[-0.15193523],\n",
+       "         [-0.13021699],\n",
+       "         [ 0.48745418]],\n",
        " \n",
-       "        [[-0.15947178],\n",
-       "         [-0.10749058],\n",
-       "         [ 0.5363273 ]]], dtype=float32))"
+       "        [[-0.1517909 ],\n",
+       "         [-0.1343902 ],\n",
+       "         [-0.05137172]]], dtype=float32))"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,10 +271,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c82f4d93-755d-4c62-878c-3ed804b9d73e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[-0.23518433],\n",
+       "         [ 0.09234667],\n",
+       "         [ 0.02250122]],\n",
+       " \n",
+       "        [[-0.01212053],\n",
+       "         [-0.02103543],\n",
+       "         [ 0.06111678]],\n",
+       " \n",
+       "        [[ 0.2551161 ],\n",
+       "         [ 0.13403681],\n",
+       "         [-0.07359912]]], dtype=float32),\n",
+       " 0.04490134)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l3 = h5_model.layers[2]\n",
     "filter_1 = l3.weights[0].numpy()[:,:,:,0]\n",
@@ -283,10 +314,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "c88aca10-59ef-4296-b338-149222fe7136",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 0:00:00.001706\n",
+      "(1, 30, 30, 32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(32,), dtype=float32, numpy=\n",
+       "array([0.05006328, 0.        , 0.05499763, 0.06115919, 0.        ,\n",
+       "       0.20250143, 0.        , 0.12057613, 0.        , 0.        ,\n",
+       "       0.13808972, 0.        , 0.16267581, 0.        , 0.04060512,\n",
+       "       0.09993156, 0.        , 0.02537329, 0.0487398 , 0.05872676,\n",
+       "       0.0784109 , 0.12273581, 0.15963419, 0.01881824, 0.18096109,\n",
+       "       0.07243733, 0.        , 0.        , 0.05815995, 0.0821218 ,\n",
+       "       0.        , 0.07613287], dtype=float32)>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# run the tf conv2d layer and print the channel values for the first entry\n",
     "t = datetime.now()\n",
@@ -307,10 +364,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ee2975d4-f9b4-4515-9775-6befec6063c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.050063286"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# calculate the first value\n",
     "np.sum(l2_out_1 * filter_1) + bias_1"
@@ -326,10 +394,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "74d49fd7-04e2-40b9-bc96-15f5f44d7e36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.05006329, 0.        , 0.05499763, 0.06115918, 0.        ,\n",
+       "       0.20250145, 0.        , 0.12057613, 0.        , 0.        ,\n",
+       "       0.13808972, 0.        , 0.16267581, 0.        , 0.04060512,\n",
+       "       0.09993156, 0.        , 0.02537329, 0.0487398 , 0.05872676,\n",
+       "       0.07841089, 0.12273582, 0.1596342 , 0.01881824, 0.18096109,\n",
+       "       0.07243733, 0.        , 0.        , 0.05815995, 0.0821218 ,\n",
+       "       0.        , 0.07613287])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# calculate the channel values for the first entry\n",
     "channels = l3.weights[0].numpy().shape[-1]\n",
@@ -351,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 39,
    "id": "ec268a83-92ba-4972-aea8-f0a33dd6c155",
    "metadata": {},
    "outputs": [],
@@ -374,13 +459,9 @@
     "    output = np.zeros(output_shape)\n",
     "\n",
     "    groups = input.shape[0]\n",
-    "    #rows = input.shape[1]\n",
-    "    #cols = input.shape[2]\n",
     "\n",
     "    debug = True\n",
     "    for g in range(groups):\n",
-    "        #for r in range(rows - window_row_size + 1):  # skip unpadded edges\n",
-    "        #    for c in range(cols - window_col_size + 1):  # skip unpadded edges\n",
     "        for r in range(output_shape[1]):  # skip unpadded edges\n",
     "            for c in range(output_shape[2]):  # skip unpadded edges\n",
     "\n",
@@ -415,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 40,
    "id": "2af55df3-7ed6-4924-8dbe-06fc11550e01",
    "metadata": {},
    "outputs": [
@@ -427,23 +508,23 @@
       "weights shape: (3, 3, 1, 32)\n",
       "\n",
       "in shape: (3, 3, 1), filter: (3, 3, 1)\n",
-      "Time elapsed: 0:00:00.608931\n",
+      "Time elapsed: 0:00:00.594681\n",
       "(1, 30, 30, 32)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.16193339, 0.05731045, 0.        , 0.        , 0.        ,\n",
-       "       0.07186231, 0.01496371, 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.12110282, 0.07639575, 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.08606026, 0.        ,\n",
-       "       0.08105926, 0.13700518, 0.        , 0.        , 0.        ,\n",
-       "       0.01572211, 0.00423876, 0.        , 0.08994324, 0.        ,\n",
-       "       0.07543847, 0.        ])"
+       "array([0.05006329, 0.        , 0.05499763, 0.06115918, 0.        ,\n",
+       "       0.20250145, 0.        , 0.12057613, 0.        , 0.        ,\n",
+       "       0.13808972, 0.        , 0.16267581, 0.        , 0.04060512,\n",
+       "       0.09993156, 0.        , 0.02537329, 0.0487398 , 0.05872676,\n",
+       "       0.07841089, 0.12273582, 0.1596342 , 0.01881824, 0.18096109,\n",
+       "       0.07243733, 0.        , 0.        , 0.05815995, 0.0821218 ,\n",
+       "       0.        , 0.07613287])"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 41,
    "id": "98a71fce-b6ee-45b1-b541-dc7ab07e7950",
    "metadata": {},
    "outputs": [],
@@ -479,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 42,
    "id": "c91ed75c-613f-4893-9853-759f74c95b33",
    "metadata": {},
    "outputs": [
@@ -514,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 43,
    "id": "bc09f21f-07b1-4fda-8559-fa8408511918",
    "metadata": {},
    "outputs": [
@@ -522,7 +603,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0:00:00.007571\n",
+      "Time elapsed: 0:00:00.002627\n",
       "(1, 28, 28, 64)\n"
      ]
     },
@@ -530,22 +611,22 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(64,), dtype=float32, numpy=\n",
-       "array([0.        , 0.        , 0.        , 0.        , 0.49769944,\n",
-       "       0.        , 0.15165518, 0.        , 0.31784678, 0.42159253,\n",
-       "       0.        , 0.3958354 , 0.        , 0.        , 0.09659711,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.10127787,\n",
-       "       0.2358518 , 0.        , 0.13675866, 0.15558577, 0.18190861,\n",
-       "       0.        , 0.09301445, 0.08088657, 0.        , 0.        ,\n",
+       "array([0.        , 0.13606277, 0.1669277 , 0.        , 0.02371086,\n",
+       "       0.        , 0.        , 0.02051658, 0.        , 0.        ,\n",
+       "       0.        , 0.01705355, 0.        , 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.25600177, 0.        , 0.4070488 , 0.        ,\n",
-       "       0.        , 0.        , 0.26512337, 0.        , 0.        ,\n",
-       "       0.        , 0.15896116, 0.        , 0.19394155, 0.25666392,\n",
-       "       0.        , 0.06679156, 0.        , 0.14209348, 0.27046356,\n",
-       "       0.        , 0.        , 0.02366456, 0.13287333, 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.00255454], dtype=float32)>"
+       "       0.        , 0.01502133, 0.        , 0.2531605 , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.185608  , 0.        , 0.        , 0.        , 0.14853501,\n",
+       "       0.19258422, 0.19711518, 0.2783924 , 0.        , 0.        ,\n",
+       "       0.        , 0.06133013, 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.1239159 , 0.00247141, 0.31450033, 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.1799986 ], dtype=float32)>"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 44,
    "id": "667b3864-ccfe-4dd0-8536-fc426c38a3d8",
    "metadata": {},
    "outputs": [
@@ -582,29 +663,29 @@
       "weights shape: (3, 3, 32, 64)\n",
       "\n",
       "in shape: (3, 3, 32), filter: (3, 3, 32)\n",
-      "Time elapsed: 0:00:01.091430\n",
+      "Time elapsed: 0:00:01.084800\n",
       "(1, 28, 28, 64)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.        , 0.        , 0.        , 0.        , 0.49769943,\n",
-       "       0.        , 0.15165517, 0.        , 0.31784674, 0.42159255,\n",
-       "       0.        , 0.39583546, 0.        , 0.        , 0.09659713,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.10127787,\n",
-       "       0.23585178, 0.        , 0.13675864, 0.15558576, 0.1819086 ,\n",
-       "       0.        , 0.09301444, 0.08088656, 0.        , 0.        ,\n",
+       "array([0.        , 0.13606275, 0.1669277 , 0.        , 0.02371087,\n",
+       "       0.        , 0.        , 0.02051658, 0.        , 0.        ,\n",
+       "       0.        , 0.01705355, 0.        , 0.        , 0.        ,\n",
        "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.25600182, 0.        , 0.40704878, 0.        ,\n",
-       "       0.        , 0.        , 0.26512334, 0.        , 0.        ,\n",
-       "       0.        , 0.15896116, 0.        , 0.19394159, 0.25666391,\n",
-       "       0.        , 0.06679156, 0.        , 0.14209349, 0.27046354,\n",
-       "       0.        , 0.        , 0.02366454, 0.13287334, 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.00255456])"
+       "       0.        , 0.01502134, 0.        , 0.25316052, 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.185608  , 0.        , 0.        , 0.        , 0.14853505,\n",
+       "       0.19258418, 0.1971152 , 0.27839242, 0.        , 0.        ,\n",
+       "       0.        , 0.06133016, 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.12391588, 0.0024714 , 0.31450042, 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.17999861])"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 45,
    "id": "3444bbe0-e7c1-4518-808a-a0cf1aa6c315",
    "metadata": {},
    "outputs": [
