--- a/audio/simple-sr/resizing_normalization.ipynb
+++ b/audio/simple-sr/resizing_normalization.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "078af610-e416-498b-9afe-5dad9dd2078e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-28 10:56:00.571210: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import pathlib\n",
     "import numpy as np\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "6229b6c3-1970-434f-b22f-1d1fa0b82220",
    "metadata": {},
    "outputs": [],
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "502936fe-e22c-4c53-9e23-4af9df24c660",
    "metadata": {},
    "outputs": [],
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "48c928d6-ee63-4803-aed3-921ca8e85291",
    "metadata": {},
    "outputs": [
@@ -79,25 +88,25 @@
       "text/plain": [
        "(TensorShape([1, 124, 129, 1]),\n",
        " <tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
-       " array([[0.00021577],\n",
-       "        [0.00242205],\n",
-       "        [0.00827248],\n",
-       "        [0.01238501],\n",
-       "        [0.01051275],\n",
-       "        [0.01144113],\n",
-       "        [0.01872324],\n",
-       "        [0.02427843],\n",
-       "        [0.04116756],\n",
-       "        [0.09470174]], dtype=float32)>)"
+       " array([[0.00087561],\n",
+       "        [0.00134371],\n",
+       "        [0.00557508],\n",
+       "        [0.01203688],\n",
+       "        [0.01582851],\n",
+       "        [0.01979508],\n",
+       "        [0.03313684],\n",
+       "        [0.05369601],\n",
+       "        [0.05009932],\n",
+       "        [0.03737277]], dtype=float32)>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "waveform = get_waveform(data_dir/'test/h_yes.wav')\n",
+    "waveform = get_waveform(data_dir/'yes.wav')\n",
     "spec = get_spectrogram(waveform)\n",
     "input_data = spec[tf.newaxis,...]\n",
     "input_data.shape, input_data[0,0,:10,:]"
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "34b59714-c327-44cd-a908-553cd3baa6d6",
    "metadata": {},
    "outputs": [
@@ -156,7 +165,7 @@
     }
    ],
    "source": [
-    "h5_model = tf.keras.models.load_model('simple_audio.h5')\n",
+    "h5_model = tf.keras.models.load_model('simple-sr.h5')\n",
     "h5_model.summary()"
    ]
   },
@@ -170,26 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "3c25c8f0-ed33-4c8f-a966-757f3657b665",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.preprocessing.image_preprocessing.Resizing at 0x10b38bc90>,\n",
-       " <keras.layers.preprocessing.normalization.Normalization at 0x12d0d7690>,\n",
-       " <keras.layers.convolutional.conv2d.Conv2D at 0x12d5d7090>,\n",
-       " <keras.layers.convolutional.conv2d.Conv2D at 0x12d524250>,\n",
-       " <keras.layers.pooling.max_pooling2d.MaxPooling2D at 0x12d591250>,\n",
-       " <keras.layers.regularization.dropout.Dropout at 0x12d6bf790>,\n",
-       " <keras.layers.reshaping.flatten.Flatten at 0x12d6bec50>,\n",
-       " <keras.layers.core.dense.Dense at 0x12d6bd2d0>,\n",
-       " <keras.layers.regularization.dropout.Dropout at 0x12d6c3ed0>,\n",
-       " <keras.layers.core.dense.Dense at 0x12d6c38d0>]"
+       "[<keras.layers.preprocessing.image_preprocessing.Resizing at 0x12c45ded0>,\n",
+       " <keras.layers.preprocessing.normalization.Normalization at 0x12b4efdd0>,\n",
+       " <keras.layers.convolutional.conv2d.Conv2D at 0x12b4c5190>,\n",
+       " <keras.layers.convolutional.conv2d.Conv2D at 0x12b4e17d0>,\n",
+       " <keras.layers.pooling.max_pooling2d.MaxPooling2D at 0x12a7ca7d0>,\n",
+       " <keras.layers.regularization.dropout.Dropout at 0x12c481e50>,\n",
+       " <keras.layers.reshaping.flatten.Flatten at 0x12ba6a3d0>,\n",
+       " <keras.layers.core.dense.Dense at 0x12c465050>,\n",
+       " <keras.layers.regularization.dropout.Dropout at 0x12c4a4050>,\n",
+       " <keras.layers.core.dense.Dense at 0x12c4bc190>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,17 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "ee54144b-bc75-4526-aa78-63ffaf5c1979",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<KerasTensor: shape=(None, 1, 124, 129, 1) dtype=float32 (created by layer 'input_2')>"
+       "<KerasTensor: shape=(None, 1, 124, 129, 1) dtype=float32 (created by layer 'input_1')>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "8dccd255-e8cc-450a-8ca0-75b4e2ca760e",
    "metadata": {},
    "outputs": [
@@ -231,7 +240,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "c2c4b40a-1bc6-445d-9b37-c999ec211d8f",
    "metadata": {},
    "outputs": [
@@ -254,7 +263,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "07ef1295-6dfd-4924-901f-a11480f631f3",
    "metadata": {},
    "outputs": [],
@@ -337,63 +346,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "7dd2e36a-6caf-477f-9b97-53b026b1487f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 124, 129, 1)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "1cd430fe-bab7-4916-abbf-68686931a69b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Interp 1.437500 1 2, 1.515625 1 2\n",
-      "Interp 1.437500 1 2, 5.546875 5 6\n",
-      "Interp 1.437500 1 2, 9.578125 9 10\n",
-      "Interp 1.437500 1 2, 13.609375 13 14\n",
-      "Interp 1.437500 1 2, 17.640625 17 18\n",
-      "Interp 1.437500 1 2, 21.671875 21 22\n",
-      "Interp 1.437500 1 2, 25.703125 25 26\n",
-      "Interp 1.437500 1 2, 29.734375 29 30\n",
-      "Interp 1.437500 1 2, 33.765625 33 34\n",
-      "Interp 1.437500 1 2, 37.796875 37 38\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[0.00331012],\n",
-       "       [0.0239757 ],\n",
-       "       [0.09051986],\n",
-       "       [0.05873445],\n",
-       "       [0.07851263],\n",
-       "       [0.05929786],\n",
-       "       [0.05793667],\n",
-       "       [0.02979692],\n",
-       "       [0.03618773],\n",
-       "       [0.02978715]], dtype=float32)"
+       "array([[0.00606233],\n",
+       "       [0.02537882],\n",
+       "       [0.09502278],\n",
+       "       [0.08039056],\n",
+       "       [0.0536858 ],\n",
+       "       [0.06792126],\n",
+       "       [0.03798125],\n",
+       "       [0.06584655],\n",
+       "       [0.08855249],\n",
+       "       [0.11348754]], dtype=float32)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "0d2a6e8a-04b4-4531-bfec-d587052d5fbc",
    "metadata": {},
    "outputs": [
@@ -414,25 +386,25 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
-       "array([[0.00331012],\n",
-       "       [0.0239757 ],\n",
-       "       [0.09051986],\n",
-       "       [0.05873445],\n",
-       "       [0.07851262],\n",
-       "       [0.05929786],\n",
-       "       [0.05793667],\n",
-       "       [0.02979692],\n",
-       "       [0.03618773],\n",
-       "       [0.02978715]], dtype=float32)>"
+       "array([[0.00606233],\n",
+       "       [0.02537882],\n",
+       "       [0.09502278],\n",
+       "       [0.08039056],\n",
+       "       [0.0536858 ],\n",
+       "       [0.06792126],\n",
+       "       [0.03798125],\n",
+       "       [0.06584655],\n",
+       "       [0.08855248],\n",
+       "       [0.11348754]], dtype=float32)>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# verify with the source of truth\n",
+    "# verify with the saved model\n",
     "l1[0,0,:10,:]"
    ]
   },
@@ -446,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "5bf868c5-de4e-40a6-8209-ed59bb67242d",
    "metadata": {},
    "outputs": [
@@ -458,7 +430,7 @@
        " 102374400)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "d4c22b32-9942-4256-8b14-8bd4f54544ae",
    "metadata": {},
    "outputs": [
@@ -479,7 +451,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "f9835d29-92c2-438c-aa00-8f22f6e0c71f",
    "metadata": {},
    "outputs": [
@@ -499,19 +471,19 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
-       "array([[-0.15976997],\n",
-       "       [-0.13272853],\n",
-       "       [-0.04565387],\n",
-       "       [-0.08724585],\n",
-       "       [-0.06136563],\n",
-       "       [-0.08650862],\n",
-       "       [-0.08828977],\n",
-       "       [-0.12511134],\n",
-       "       [-0.11674879],\n",
-       "       [-0.12512411]], dtype=float32)>"
+       "array([[-0.15616861],\n",
+       "       [-0.13089252],\n",
+       "       [-0.0397617 ],\n",
+       "       [-0.05890831],\n",
+       "       [-0.09385214],\n",
+       "       [-0.0752247 ],\n",
+       "       [-0.11440194],\n",
+       "       [-0.0779395 ],\n",
+       "       [-0.04822823],\n",
+       "       [-0.0156001 ]], dtype=float32)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "3a5889eb-f121-4e1f-8383-262e581ec9c4",
    "metadata": {},
    "outputs": [
@@ -540,7 +512,7 @@
        "TensorShape([1, 32, 32, 1])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "2932a811-6ff2-4d72-9a4a-ff856159f6c4",
    "metadata": {},
    "outputs": [
@@ -564,19 +536,19 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
-       "array([[-0.15976997],\n",
-       "       [-0.13272853],\n",
-       "       [-0.04565387],\n",
-       "       [-0.08724585],\n",
-       "       [-0.06136563],\n",
-       "       [-0.08650862],\n",
-       "       [-0.08828977],\n",
-       "       [-0.12511134],\n",
-       "       [-0.11674879],\n",
-       "       [-0.12512411]], dtype=float32)>"
+       "array([[-0.15616861],\n",
+       "       [-0.13089252],\n",
+       "       [-0.0397617 ],\n",
+       "       [-0.05890831],\n",
+       "       [-0.09385214],\n",
+       "       [-0.0752247 ],\n",
+       "       [-0.11440194],\n",
+       "       [-0.0779395 ],\n",
+       "       [-0.04822823],\n",
+       "       [-0.0156001 ]], dtype=float32)>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,26 +567,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "128196d6-8c44-48f5-99de-770174fa83ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.15976997],\n",
-       "       [-0.13272853],\n",
-       "       [-0.04565387],\n",
-       "       [-0.08724585],\n",
-       "       [-0.06136563],\n",
-       "       [-0.08650862],\n",
-       "       [-0.08828977],\n",
-       "       [-0.12511134],\n",
-       "       [-0.11674879],\n",
-       "       [-0.12512411]], dtype=float32)"
+       "array([[-0.15616861],\n",
+       "       [-0.13089252],\n",
+       "       [-0.0397617 ],\n",
+       "       [-0.05890831],\n",
+       "       [-0.09385214],\n",
+       "       [-0.0752247 ],\n",
+       "       [-0.11440194],\n",
+       "       [-0.0779395 ],\n",
+       "       [-0.04822823],\n",
+       "       [-0.0156001 ]], dtype=float32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
