--- a/audio/simple-sr/weights.ipynb
+++ b/audio/simple-sr/weights.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "4027bb3e-d3b6-461e-abca-24fadb16e470",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-28 11:08:53.500052: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import pathlib\n",
     "import numpy as np\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "96dbae7a-6dbd-4113-8402-21b92ee26d68",
    "metadata": {},
    "outputs": [],
@@ -29,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "ec71cdc9-9151-4ce3-8119-0057f8e615af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.saved_model.load.Loader._recreate_base_user_object.<locals>._UserObject at 0x12734be10>"
+       "<tensorflow.python.saved_model.load.Loader._recreate_base_user_object.<locals>._UserObject at 0x12f82ff50>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "7119637a-7fe3-4095-9c4b-e67f95e5c802",
    "metadata": {},
    "outputs": [
@@ -93,13 +102,13 @@
     }
    ],
    "source": [
-    "h5_model = tf.keras.models.load_model('simple_audio.h5')\n",
+    "h5_model = tf.keras.models.load_model('simple-sr.h5')\n",
     "h5_model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 5,
    "id": "6e01918f-85bd-423d-9397-e8174fb60156",
    "metadata": {},
    "outputs": [],
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "id": "397962be-eaf9-4ae2-9fc1-265afe2a1c9f",
    "metadata": {},
    "outputs": [],
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "id": "9bb65ff1-de66-4475-8684-0240d96e01cd",
    "metadata": {},
    "outputs": [
@@ -223,27 +232,6 @@
    "source": [
     "for v in m.variables:\n",
     "    print(v.name, v.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "id": "3ed13c72-16b3-47a0-8654-b16bdbf2c29d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(m.variables[3].numpy().shape)"
    ]
   },
   {
