--- a/audio/simple-sr/weights.ipynb
+++ b/audio/simple-sr/weights.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "4027bb3e-d3b6-461e-abca-24fadb16e470",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-28 11:08:53.500052: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pathlib\n",
     "import numpy as np\n",
@@ -27,28 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "96dbae7a-6dbd-4113-8402-21b92ee26d68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "imported = tf.saved_model.load('saved')\n",
+    "imported = tf.saved_model.load('saved_v2')\n",
     "m = imported.model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "ec71cdc9-9151-4ce3-8119-0057f8e615af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.saved_model.load.Loader._recreate_base_user_object.<locals>._UserObject at 0x12f82ff50>"
+       "<tensorflow.python.saved_model.load.Loader._recreate_base_user_object.<locals>._UserObject at 0x12fda6410>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "7119637a-7fe3-4095-9c4b-e67f95e5c802",
    "metadata": {},
    "outputs": [
@@ -67,48 +58,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " resizing (Resizing)         (None, 32, 32, 1)         0         \n",
+      " resizing_1 (Resizing)       (None, 64, 64, 1)         0         \n",
       "                                                                 \n",
-      " normalization (Normalizatio  (None, 32, 32, 1)        3         \n",
-      " n)                                                              \n",
+      " normalization_4 (Normalizat  (None, 64, 64, 1)        3         \n",
+      " ion)                                                            \n",
       "                                                                 \n",
-      " conv2d (Conv2D)             (None, 30, 30, 32)        320       \n",
+      " conv2d_8 (Conv2D)           (None, 62, 62, 32)        320       \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 28, 28, 64)        18496     \n",
+      " max_pooling2d_6 (MaxPooling  (None, 31, 31, 32)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 14, 14, 64)       0         \n",
-      " )                                                               \n",
+      " conv2d_9 (Conv2D)           (None, 29, 29, 64)        18496     \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 14, 14, 64)        0         \n",
+      " max_pooling2d_7 (MaxPooling  (None, 14, 14, 64)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 12544)             0         \n",
+      " conv2d_10 (Conv2D)          (None, 12, 12, 128)       73856     \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               1605760   \n",
+      " max_pooling2d_8 (MaxPooling  (None, 6, 6, 128)        0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 128)               0         \n",
+      " dropout_4 (Dropout)         (None, 6, 6, 128)         0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 8)                 1032      \n",
+      " flatten_2 (Flatten)         (None, 4608)              0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 128)               589952    \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 8)                 1032      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 1,625,611\n",
-      "Trainable params: 1,625,608\n",
+      "Total params: 683,659\n",
+      "Trainable params: 683,656\n",
       "Non-trainable params: 3\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "h5_model = tf.keras.models.load_model('simple-sr.h5')\n",
+    "h5_model = tf.keras.models.load_model('simple-sr_v2.h5')\n",
     "h5_model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "6e01918f-85bd-423d-9397-e8174fb60156",
    "metadata": {},
    "outputs": [],
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "397962be-eaf9-4ae2-9fc1-265afe2a1c9f",
    "metadata": {},
    "outputs": [],
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "9bb65ff1-de66-4475-8684-0240d96e01cd",
    "metadata": {},
    "outputs": [
@@ -218,14 +217,16 @@
       "mean:0 (1,)\n",
       "variance:0 (1,)\n",
       "count:0 ()\n",
-      "conv2d/kernel:0 (3, 3, 1, 32)\n",
-      "conv2d/bias:0 (32,)\n",
-      "conv2d_1/kernel:0 (3, 3, 32, 64)\n",
-      "conv2d_1/bias:0 (64,)\n",
-      "dense/kernel:0 (12544, 128)\n",
-      "dense/bias:0 (128,)\n",
-      "dense_1/kernel:0 (128, 8)\n",
-      "dense_1/bias:0 (8,)\n"
+      "conv2d_8/kernel:0 (3, 3, 1, 32)\n",
+      "conv2d_8/bias:0 (32,)\n",
+      "conv2d_9/kernel:0 (3, 3, 32, 64)\n",
+      "conv2d_9/bias:0 (64,)\n",
+      "conv2d_10/kernel:0 (3, 3, 64, 128)\n",
+      "conv2d_10/bias:0 (128,)\n",
+      "dense_4/kernel:0 (4608, 128)\n",
+      "dense_4/bias:0 (128,)\n",
+      "dense_5/kernel:0 (128, 8)\n",
+      "dense_5/bias:0 (8,)\n"
      ]
     }
    ],
